assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Send+Flowers&display=swap');

* {
    margin: 0;
    padding: 0;
}
body {
    font-family: Send Flowers, Arial, Helvetica, sans-serif;
    font-weight: 300;
    color:rgb(195, 11, 11)
}

header{
    background-color: black;
    height: 225px;
}

h1,h2 {letter-spacing: 3px;}
 
#temp-div-block{
    padding: 1px 1px;
    background-color:black;
    opacity: .9;
    width: 100%;
    height: 100%;
}
#maynes {
    float: left;
    padding: 30px ;
    color: rgb(232, 3, 3);
    font-size: 450%;
    margin-left: 50px;
}

#nav-links{
    font-size: 150%;
    letter-spacing: 3px;
}

#nav-links li{
    float: right;
    padding: 10px;
    list-style-type: none;
    margin-right: 20px;
    top: 150px;
}
#maynes, #nav-links{

    line-height: 150px;
}
#nav-links a {
text-decoration: none;
padding: 0 30px;
color: rgb(232, 3, 3);
}

#nav-links a:hover{
    border-bottom: 1px solid white;
    color: white;
}

.active{
    border-bottom: solid 1px;
}

#mini-header-block {
    background-color: black;
    opacity: .85;
    height: 200px;
    width: auto;
}
#section2-image {
    height: 200px;
    width: 100%;
    background: url(../images/rows-wine-bottles.jpeg) no-repeat center center ;
    background-size: cover;
}

/* main-image-block */

#home-right-text {
    float: right;
    width: 200px;
    color: red;
    height: auto;
    
    

    padding: 20px;
    background-color:rgb(0, 0, 0, .9);
   

    position: absolute;
    left: 500px;
    bottom: 250px;
}

#home-image {
    width: 100%;
    height: 650px;
    background: url(../images/rows-wine-bottles.jpeg) no-repeat center center;
    background-size: cover;
    position: absolute;
    
    
    
    animation-name: home-zoom;
    animation-duration: 5s;
    animation-fill-mode: forwards;
}

@keyframes home-zoom {
    from{ transform: scale(1)

    }
    to { transform: scale(1.1);

    }
}
#home-outer {
    width: 100%;
    height: 600px;
    overflow: hidden;
    background-color: black;
    position: relative;
}
/* open and club blocks */

#bottom-blocks {
    background-color: maroon;
    height: 300px;
    
    
}

#opening{
width: 40%;
float: left;
background-color: black;
color: white;
margin: 0 5%;
text-align: center;
height: auto;
margin-top: 30px;

}

#club {
width: 40%;
float: right;
margin: 0 5%;
background-color: rgb(195, 11, 11, .7);
color: white;
text-align: center;
height: auto;


}


/* footer link stylings */

footer{
    text-align: center;
    float: inline-start;
    background-color: black;
    letter-spacing: 50px;
    color: maroon;
    
}

/* add media queries */

@media screen and (max-width:1200px){
    #home-right-text {
        width: 65%;
        height: 100%;;
        margin: auto;
    }
}

